[package]
name = "wheel-timer2"
version = "0.1.0"
edition = "2021"
description = "A timer based on a multi-time wheel structure"
license-file = "LICENSE"
documentation = "https://docs.rs/wheel-timer2"
repository = "https://github.com/juzi5201314/wheel-timer"
authors = ["soeur <juzi201314@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt", "net", "sync"] }
once_cell = "1.8.0"
crossbeam-utils = "0.8.6"
tokio-tungstenite = "0.16"
futures-util = "0.3"
